--- a/examples/webgl_animation_keyframes_ssr.html
+++ b/examples/webgl_animation_keyframes_ssr.html
@@ -34,7 +34,7 @@
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - animation - keyframes<br/>
 			Model: <a href="https://www.artstation.com/artwork/1AGwX" target="_blank" rel="noopener">Littlest Tokyo</a> by
 			<a href="https://www.artstation.com/glenatron" target="_blank" rel="noopener">Glen Fox</a>, CC Attribution.<br/>
-			SSRPass add by <a href="https://github.com/gonnavis" target="_blank">Vis</a>
+			<a href="https://github.com/mrdoob/three.js/pull/20156" target="_blank" rel="noopener">SSRPass</a> add by <a href="https://github.com/gonnavis" target="_blank" rel="noopener">Vis</a>
 		</div>
 
 		<script type="module">
@@ -53,6 +53,7 @@
 
 	var params = {
 		enableSSR: true,
+		darken: false,
 	}
 	var composer
 	var ssrPass
@@ -142,7 +143,7 @@
 // composer
 
 composer = new EffectComposer(renderer);
-ssrPass = new SSRPass(scene, camera, innerWidth, innerHeight);
+ssrPass = new SSRPass({scene, camera, innerWidth, innerHeight});
 composer.addPass(ssrPass);
 
 // GUI
@@ -151,6 +152,15 @@ gui = new GUI( { width: 400 } );
 // ssrPass.surfDist=4.2
 ssrPass.surfDist=.0006
 // ssrPass.output=SSRPass.OUTPUT.SSR
+ssrPass.encoding = THREE.sRGBEncoding
+gui.add(params, 'enableSSR').name( 'Enable SSR' );
+gui.add(params, 'darken').name('rainy').onChange(function(value){
+	if(value){
+		ssrPass.encoding = THREE.LinearEncoding
+	}else{
+		ssrPass.encoding = THREE.sRGBEncoding
+	}
+});
 gui.add(ssrPass, 'output', {
 	'Default': SSRPass.OUTPUT.Default,
 	'DefaultBlur': SSRPass.OUTPUT.DefaultBlur,
@@ -164,7 +174,6 @@ gui.add(ssrPass, 'output', {
 	ssrPass.output = parseInt(value);
 
 });
-gui.add(params, 'enableSSR').name( 'Enable SSR' );
 gui.add(ssrPass, 'opacity').min(0).max(1);
 gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 // gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
