--- a/examples/physics_ammo_volume_ssr.html
+++ b/examples/physics_ammo_volume_ssr.html
@@ -145,7 +145,12 @@
 				// composer
 
 				composer = new EffectComposer(renderer);
-				ssrPass = new SSRPass({scene, camera, innerWidth, innerHeight});
+				ssrPass = new SSRPass({
+					scene, 
+					camera, 
+					width: innerWidth, 
+					height: innerHeight,
+				});
 				composer.addPass(ssrPass);
 
 				// GUI
