--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -279,6 +279,11 @@
 			width: innerWidth, 
 			height: innerHeight,
 			// encoding: THREE.sRGBEncoding,
+			selects:[
+				scene.children[3],
+				scene.children[4],
+				scene.children[10],
+			]
 		});
 		composer.addPass(ssrPass);
 
