--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -280,6 +280,7 @@
 			height: innerHeight,
 			// encoding: THREE.sRGBEncoding,
 			selects:[
+				scene.children[1],
 				scene.children[3],
 				scene.children[4],
 				scene.children[10],
