--- a/examples/physics_ammo_volume_ssr.html
+++ b/examples/physics_ammo_volume_ssr.html
@@ -159,6 +159,8 @@
 				// ssrPass.surfDist=4.2
 				ssrPass.surfDist=.003
 				// ssrPass.output=SSRPass.OUTPUT.SSR
+				gui.add(params, 'enableSSR').name( 'Enable SSR' );
+				gui.add(ssrPass,'isBouncing')
 				gui.add(ssrPass, 'output', {
 					'Default': SSRPass.OUTPUT.Default,
 					'DefaultBlur': SSRPass.OUTPUT.DefaultBlur,
@@ -172,7 +174,6 @@
 					ssrPass.output = parseInt(value);
 
 				});
-				gui.add(params, 'enableSSR').name( 'Enable SSR' );
 				gui.add(ssrPass, 'opacity').min(0).max(1);
 				gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 				// gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
