--- a/examples/webgl_animation_keyframes_ssr.html
+++ b/examples/webgl_animation_keyframes_ssr.html
@@ -185,6 +185,9 @@ gui.add(ssrPass, 'opacity').min(0).max(1);
 gui.add(ssrPass, 'maxDistance').min(0).max(10).step(.001);
 // gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
 gui.add(ssrPass, 'surfDist').min(0).max(.002).step(.0001);
+gui.add(ssrPass, 'isDistanceAttenuation');
+ssrPass.attenuationDistance=1;
+gui.add(ssrPass, 'attenuationDistance').min(0).max(10).step(.001);
 
 
 			function animate() {
