--- a/examples/webgl_postprocessing_ssr_orthographicCamera.html
+++ b/examples/webgl_postprocessing_ssr_orthographicCamera.html
@@ -326,6 +326,8 @@
 		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 		// gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
 		gui.add(ssrPass, 'surfDist').min(0).max(5).step(.01);
+		gui.add(ssrPass, 'isDistanceAttenuation');
+		gui.add(ssrPass, 'attenuationDistance').min(0).max(2000);
 
 	}
 
