--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -330,6 +330,9 @@
 		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 		// gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
 		gui.add(ssrPass, 'surfDist').min(0).max(.02).step(.0001);
+		ssrPass.isDistanceAttenuation=false
+		gui.add(ssrPass, 'isDistanceAttenuation');
+		gui.add(ssrPass, 'attenuationDistance').min(0).max(2000);
 
 	}
 
