--- a/examples/webgl_animation_keyframes_ssr.html
+++ b/examples/webgl_animation_keyframes_ssr.html
@@ -188,6 +188,10 @@ gui.add(ssrPass, 'surfDist').min(0).max(.002).step(.0001);
 gui.add(ssrPass, 'isDistanceAttenuation');
 ssrPass.attenuationDistance=1;
 gui.add(ssrPass, 'attenuationDistance').min(0).max(10).step(.001);
+ssrPass.infiniteThick=true
+gui.add(ssrPass, 'infiniteThick');
+ssrPass.thickTolerance=.3
+gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
 
 
 			function animate() {
