--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -92,7 +92,8 @@
 		// camera.position.set(394.8768477903498,  424.03752576248496,  815.0242032138592)
 
 		camera = new THREE.PerspectiveCamera( 90, window.innerWidth / window.innerHeight, 2, 10000 );
-		camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
+		// camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
+		camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
 		// window.camera=camera
 
 		// SCENE
