--- a/examples/webgl_animation_keyframes_ssr.html
+++ b/examples/webgl_animation_keyframes_ssr.html
@@ -84,7 +84,7 @@
 			controls.target.set( 0, 0.5, 0 );
 			controls.update();
 			controls.enablePan = false;
-			controls.enableDamping = true;
+			// controls.enableDamping = true;
 
 			scene.add( new THREE.HemisphereLight( 0xffffff, 0x000000, 0.4 ) );
 
@@ -155,11 +155,12 @@ composer.addPass(ssrPass);
 // GUI
 
 gui = new GUI( { width: 400 } );
-// ssrPass.surfDist=4.2
 ssrPass.maxDistance=4.5
 ssrPass.surfDist=.001
-// ssrPass.output=SSRPass.OUTPUT.SSR
 gui.add(params, 'enableSSR').name( 'Enable SSR' );
+gui.add(ssrPass, 'isDistanceAttenuation');
+ssrPass.attenuationDistance=1;
+gui.add(ssrPass, 'attenuationDistance').min(0).max(10).step(.001);
 gui.add(params, 'darken').name('rainy').onChange(function(value){
 	if(value){
 		ssrPass.encoding = THREE.LinearEncoding
@@ -170,9 +171,7 @@ gui.add(params, 'darken').name('rainy').onChange(function(value){
 gui.add(ssrPass,'isBouncing')
 gui.add(ssrPass, 'output', {
 	'Default': SSRPass.OUTPUT.Default,
-	'DefaultBlur': SSRPass.OUTPUT.DefaultBlur,
 	'SSR Only': SSRPass.OUTPUT.SSR,
-	'SSR Only + Blur': SSRPass.OUTPUT.Blur,
 	'Beauty': SSRPass.OUTPUT.Beauty,
 	'Depth': SSRPass.OUTPUT.Depth,
 	'Normal': SSRPass.OUTPUT.Normal
@@ -185,13 +184,13 @@ gui.add(ssrPass, 'opacity').min(0).max(1);
 gui.add(ssrPass, 'maxDistance').min(0).max(10).step(.001);
 // gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
 gui.add(ssrPass, 'surfDist').min(0).max(.002).step(.0001);
-gui.add(ssrPass, 'isDistanceAttenuation');
-ssrPass.attenuationDistance=1;
-gui.add(ssrPass, 'attenuationDistance').min(0).max(10).step(.001);
-ssrPass.infiniteThick=true
-gui.add(ssrPass, 'infiniteThick');
+ssrPass.isInfiniteThick=true
+gui.add(ssrPass, 'isInfiniteThick');
 ssrPass.thickTolerance=.3
 gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
+gui.add(ssrPass, 'isBlur');
+gui.add(ssrPass, 'isNoise');
+gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.01);
 
 
 			function animate() {
