--- a/examples/physics_ammo_volume_ssr.html
+++ b/examples/physics_ammo_volume_ssr.html
@@ -156,16 +156,15 @@
 				// GUI
 
 				gui = new GUI( { width: 400 } );
-				// ssrPass.surfDist=4.2
 				ssrPass.surfDist=.003
-				// ssrPass.output=SSRPass.OUTPUT.SSR
 				gui.add(params, 'enableSSR').name( 'Enable SSR' );
+				gui.add(ssrPass, 'isDistanceAttenuation');
+				ssrPass.attenuationDistance=10;
+				gui.add(ssrPass, 'attenuationDistance').min(0).max(50).step(.1);
 				gui.add(ssrPass,'isBouncing')
 				gui.add(ssrPass, 'output', {
 					'Default': SSRPass.OUTPUT.Default,
-					'DefaultBlur': SSRPass.OUTPUT.DefaultBlur,
 					'SSR Only': SSRPass.OUTPUT.SSR,
-					'SSR Only + Blur': SSRPass.OUTPUT.Blur,
 					'Beauty': SSRPass.OUTPUT.Beauty,
 					'Depth': SSRPass.OUTPUT.Depth,
 					'Normal': SSRPass.OUTPUT.Normal
@@ -176,11 +175,14 @@
 				});
 				gui.add(ssrPass, 'opacity').min(0).max(1);
 				gui.add(ssrPass, 'maxDistance').min(0).max(2000);
-				// gui.add(ssrPass, 'surfDist').min(0).max(10).step(.1);
 				gui.add(ssrPass, 'surfDist').min(0).max(.02).step(.0001);
-				gui.add(ssrPass, 'isDistanceAttenuation');
-				ssrPass.attenuationDistance=10;
-				gui.add(ssrPass, 'attenuationDistance').min(0).max(50).step(.1);
+				ssrPass.isInfiniteThick=true
+				gui.add(ssrPass, 'isInfiniteThick');
+				ssrPass.thickTolerance=.3
+				gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
+				gui.add(ssrPass, 'isBlur');
+				gui.add(ssrPass, 'isNoise');
+				gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.01);
 
 			}
 
