--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -280,7 +280,7 @@
 			width: innerWidth, 
 			height: innerHeight,
 			// encoding: THREE.sRGBEncoding,
-			morphTargets: true,
+			// morphTargets: true,
 		});
 		composer.addPass(ssrPass);
 
@@ -319,6 +319,7 @@
 		gui.add(ssrPass, 'thickTolerance').min(0).max(.05).step(.0001);
 		gui.add(ssrPass, 'isNoise');
 		gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.01);
+		gui.add(ssrPass, 'isMorphTargets');
 
 	}
 
