--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -85,7 +85,7 @@
 		camera = new THREE.PerspectiveCamera( 90, window.innerWidth / window.innerHeight, 2, 10000 );
 		camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
 		// camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
-		// window.camera=camera
+		window.camera=camera
 
 		// SCENE
 
