--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -42,6 +42,7 @@
 	var composer
 	var ssrPass
 	var gui
+	var isPerspectiveCamera=true
 
 	var container, stats;
 
@@ -76,15 +77,18 @@
 
 		// CAMERA
 
+		// var initialFrustumSize = 1000
 		// var cameraNear = 1
 		// var cameraFar = 2000
 		// var aspect = window.innerWidth / window.innerHeight;
 		// camera = new THREE.OrthographicCamera(initialFrustumSize * aspect / - 2, initialFrustumSize * aspect / 2, initialFrustumSize / 2, initialFrustumSize / - 2, cameraNear, cameraFar);
 		// camera.position.set(394.8768477903498,  424.03752576248496,  815.0242032138592)
+		// isPerspectiveCamera=false
 
 		camera = new THREE.PerspectiveCamera( 90, window.innerWidth / window.innerHeight, 2, 10000 );
 		camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
-		// camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
+		// // camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
+
 		// window.camera=camera
 
 		// SCENE
@@ -280,6 +284,7 @@
 			width: innerWidth, 
 			height: innerHeight,
 			// encoding: THREE.sRGBEncoding,
+			isPerspectiveCamera:isPerspectiveCamera,
 			morphTargets: true,
 		});
 		composer.addPass(ssrPass);
