--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -305,8 +305,8 @@
 		gui.add(params, 'enableSSR').name( 'Enable SSR' );
 		ssrPass.isDistanceAttenuation=false
 		gui.add(ssrPass, 'isDistanceAttenuation');
-		ssrPass.attenuationDistance=900;
-		gui.add(ssrPass, 'attenuationDistance').min(0).max(2000);
+		ssrPass.maxDistance=900;
+		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 		gui.add(params, 'darken').onChange(function(value){
 			if(value){
 				ssrPass.encoding = THREE.LinearEncoding
@@ -328,7 +328,6 @@
 
 		});
 		gui.add(ssrPass, 'opacity').min(0).max(1);
-		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 		gui.add(ssrPass, 'surfDist').min(0).max(.02).step(.0001);
 		gui.add(ssrPass, 'isInfiniteThick');
 		ssrPass.thickTolerance=.3
