--- a/examples/webgl_postprocessing_ssr_selective.html
+++ b/examples/webgl_postprocessing_ssr_selective.html
@@ -36,8 +36,6 @@
 
 	import Stats from './jsm/libs/stats.module.js';
 
-	import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
-	
 	import { OrbitControls } from './jsm/controls/OrbitControls.js'
 	
 	import { GUI } from './jsm/libs/dat.gui.module.js';
@@ -91,8 +89,8 @@
 		// camera.position.set(394.8768477903498,  424.03752576248496,  815.0242032138592)
 
 		camera = new THREE.PerspectiveCamera( 90, window.innerWidth / window.innerHeight, 2, 10000 );
-		// camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
-		camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
+		camera.position.set( 388.5770726262176,  305.6568142796153,  647.1326965696304);
+		// camera.position.set( -612.8787517743004,  518.3480614141735,  137.45500830289768);
 		// window.camera=camera
 
 		// SCENE
@@ -203,28 +201,6 @@
 
 		addObjectColor( new THREE.SphereBufferGeometry( 100, 32, 26 ), 0xffffff, - 300, 100, 300, 0 );
 
-		// MORPHS
-
-		var loader = new GLTFLoader();
-
-		loader.load( "models/gltf/SittingBox.glb", function ( gltf ) {
-
-			var mesh = gltf.scene.children[ 0 ];
-
-			mixer = new THREE.AnimationMixer( mesh );
-
-			mixer.clipAction( gltf.animations[ 0 ] ).setDuration( 10 ).play();
-
-			var s = 200;
-			mesh.scale.set( s, s, s );
-
-			mesh.castShadow = true;
-			mesh.receiveShadow = true;
-
-			scene.add( mesh );
-
-		} );
-
 		// LIGHTS
 
 		ambientLight = new THREE.AmbientLight( 0x3f2806 );
@@ -289,10 +265,11 @@
 			height: innerHeight,
 			encoding: THREE.sRGBEncoding,
 			// selects:[
-			// 	scene.children[1],
-			// 	scene.children[3],
-			// 	scene.children[4],
-			// 	scene.children[10],
+			// 	// scene.children[1],
+			// 	// scene.children[3],
+			// 	// scene.children[4],
+			// 	// scene.children[10],
+			// 	ground
 			// ]
 		});
 		composer.addPass(ssrPass);
@@ -319,6 +296,7 @@
 			ssrPass.output = parseInt(value);
 
 		});
+		ssrPass.opacity=.3
 		gui.add(ssrPass, 'opacity').min(0).max(1);
 		gui.add(ssrPass, 'surfDist').min(0).max(.02).step(.0001);
 		gui.add(ssrPass, 'isInfiniteThick');
