--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -298,6 +298,7 @@
 		gui = new GUI( { width: 400 } );
 		gui.add(params, 'enableSSR').name( 'Enable SSR' );
 		gui.add(ssrPass, 'isDistanceAttenuation');
+		ssrPass.maxDistance=880
 		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
 		gui.add(ssrPass,'isBouncing')
 		gui.add(ssrPass, 'output', {
@@ -322,6 +323,7 @@
 		}
 		gui.add(ssrPass, 'isInfiniteThick');
 		gui.add(ssrPass, 'thickTolerance').min(0).max(.05).step(.0001);
+		ssrPass.isBlur=true
 		gui.add(ssrPass, 'isBlur');
 		gui.add(ssrPass, 'isNoise');
 		gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.01);
