--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -297,6 +297,7 @@
 
 		gui = new GUI( { width: 400 } );
 		gui.add(params, 'enableSSR').name( 'Enable SSR' );
+		ssrPass.isDistanceAttenuation=false
 		gui.add(ssrPass, 'isDistanceAttenuation');
 		ssrPass.maxDistance=880
 		gui.add(ssrPass, 'maxDistance').min(0).max(2000);
@@ -313,6 +314,7 @@
 			ssrPass.output = parseInt(value);
 
 		});
+		ssrPass.opacity=1
 		gui.add(ssrPass, 'opacity').min(0).max(1);
 		if(isPerspectiveCamera){
 		ssrPass.surfDist=.007
@@ -323,7 +325,7 @@
 		}
 		gui.add(ssrPass, 'isInfiniteThick');
 		gui.add(ssrPass, 'thickTolerance').min(0).max(.05).step(.0001);
-		ssrPass.isBlur=true
+		ssrPass.isBlur=false
 		gui.add(ssrPass, 'isBlur');
 		gui.add(ssrPass, 'isNoise');
 		gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.01);
