--- a/examples/demo_ssr.html
+++ b/examples/demo_ssr.html
@@ -1,212 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>three.js webgl - glTF loader</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
 
-	<body>
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - GLTFLoader<br />
-			Battle Damaged Sci-fi Helmet by
-			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
-			<a href="https://hdrihaven.com/hdri/?h=royal_esplanade" target="_blank" rel="noopener">Royal Esplanade</a> by <a href="https://hdrihaven.com/" target="_blank" rel="noopener">HDRI Haven</a>
-		</div>
+<head>
+	<title>three.js webgl - materials</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link type="text/css" rel="stylesheet" href="main.css">
+</head>
 
-		<script type="module">
-			import * as THREE from '../build/three.module.js';
+<body>
 
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
-			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
-			import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
-			import Stats from './jsm/libs/stats.module.js';
-	
-	import { GUI } from './jsm/libs/dat.gui.module.js';
-	import { EffectComposer } from './jsm/postprocessing/EffectComposer.js';
-	import { SSRPass } from './jsm/postprocessing/SSRPass.js';
+	<div id="container"></div>
+	<div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - Standard Material
+		Variations by <a href="http://clara.io/" target="_blank" rel="noopener">Ben Houston</a>.<br /><br />
+		Note: Every second sphere has an IBL environment map on it.</div>
 
-	var params = {
-		enableSSR: true,
-	}
-	var ssrPass
-	var gui
+	<script type="module">
 
-			var container, controls, stats;
-			var camera, scene, renderer;
+		import * as THREE from '../build/three.module.js';
 
-			init();
-			
+		import Stats from './jsm/libs/stats.module.js';
 
-			function init() {
+		import { OrbitControls } from './jsm/controls/OrbitControls.js';
+		import { RGBELoader } from './jsm/loaders/RGBELoader.js';
 
-				container = document.createElement( 'div' );
-				document.body.appendChild( container );
+		var container, stats;
 
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 50 );
-				camera.position.set(  -2.5164585178227235, 2.1567002191660913,  2.4424705475447324);
-				window.camera=camera///test
+		var camera, scene, renderer;
+		var particleLight;
 
-				scene = new THREE.Scene();
+		init();
+		animate();
 
-				new RGBELoader()
-					.setDataType( THREE.UnsignedByteType )
-					.setPath( 'textures/equirectangular/' )
-					.load( 'royal_esplanade_1k.hdr', function ( texture ) {
+		function init() {
 
-						var envMap = pmremGenerator.fromEquirectangular( texture ).texture;
+			container = document.createElement('div');
+			document.body.appendChild(container);
 
-						scene.background = envMap;
-						scene.environment = envMap;
+			camera = new THREE.PerspectiveCamera(40, window.innerWidth / window.innerHeight, 1, 2500);
+			camera.position.set(0.0, 400, 400 * 3.5);
 
-						texture.dispose();
-						pmremGenerator.dispose();
+			scene = new THREE.Scene();
 
-						// model
+			var hdrCubeRenderTarget = null;
 
-						// use of RoughnessMipmapper is optional
-						var roughnessMipmapper = new RoughnessMipmapper( renderer );
+			// Materials
 
-						var loader = new GLTFLoader().setPath( 'models/gltf/DamagedHelmet/glTF/' );
-						loader.load( 'DamagedHelmet.gltf', function ( gltf ) {
+			var imgTexture = new THREE.TextureLoader().load("textures/planets/moon_1024.jpg");
+			imgTexture.wrapS = imgTexture.wrapT = THREE.RepeatWrapping;
+			imgTexture.anisotropy = 16;
+			imgTexture = null;
 
-							gltf.scene.traverse( function ( child ) {
+			new RGBELoader()
+				.setDataType(THREE.UnsignedByteType)
+				.setPath('textures/equirectangular/')
+				.load('pedestrian_overpass_1k.hdr', function (hdrEquirect) {
 
-								if ( child.isMesh ) {
+					hdrCubeRenderTarget = pmremGenerator.fromEquirectangular(hdrEquirect);
+					hdrEquirect.dispose();
+					pmremGenerator.dispose();
 
-									// TOFIX RoughnessMipmapper seems to be broken with WebGL 2.0
-									// roughnessMipmapper.generateMipmaps( child.material );
+					var bumpScale = 1;
+					var cubeWidth = 400;
+					var numberOfSphersPerSide = 5;
+					var sphereRadius = (cubeWidth / numberOfSphersPerSide) * 0.8 * 0.5;
+					var stepSize = 1.0 / numberOfSphersPerSide;
 
-								}
+					var geometry = new THREE.SphereBufferGeometry(sphereRadius, 32, 16);
 
-							} );
+					// basic monochromatic energy preservation
+					var diffuseColor = new THREE.Color().setHSL(1, 0.5, 0.5 + 0.1);
 
-							scene.add( gltf.scene );
+					var material = new THREE.MeshStandardMaterial({
+						map: imgTexture,
+						bumpMap: imgTexture,
+						bumpScale: bumpScale,
+						color: diffuseColor,
+						metalness: 1,
+						roughness: .2,
+						envMap: hdrCubeRenderTarget.texture
+					});
 
-							roughnessMipmapper.dispose();
+					var mesh = new THREE.Mesh(geometry, material);
 
-						} );
+					scene.add(mesh);
 
-					} );
-
-
-
-				//mesh
-				{
-					{
-						let geo=new THREE.PlaneBufferGeometry(4,4)
-						let mtl=new THREE.MeshStandardMaterial({
-							color:'rgb(53,60,85)'
-						})
-						let mesh=new THREE.Mesh(geo,mtl)
-						scene.add(mesh)
-						geo.rotateX(Math.PI/-2)
-						geo.translate(0,-.9,0)
-					}
-					{
-						let name='main'
-						let geo=new THREE.IcosahedronBufferGeometry(.7,1)
-						let mtl=new THREE.MeshStandardMaterial({
-							color:'rgb(80,0,0)'
-						})
-						let mesh=new THREE.Mesh(geo,mtl)
-						window['mesh_'+name]=mesh
-						scene.add(mesh)
-						geo.translate(1.5,.5,0)
-					}
-				}
-
-				renderer = new THREE.WebGLRenderer( { antialias: false } );
-				// renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				container.appendChild( renderer.domElement );
-				
-				var pmremGenerator = new THREE.PMREMGenerator( renderer );
-				pmremGenerator.compileEquirectangularShader();
-				controls = new OrbitControls( camera, renderer.domElement );
-
-				window.addEventListener( 'resize', onWindowResize, false );
-
-		// STATS
-
-		stats = new Stats();
-		container.appendChild( stats.dom );
-
-				// composer
-
-				window.composer = new EffectComposer(renderer);
-				ssrPass = new SSRPass({
-					scene, 
-					camera, 
-					width: innerWidth, 
-					height: innerHeight,
-					// encoding: THREE.sRGBEncoding,
-				});
-				composer.addPass(ssrPass);
-
-				// GUI
-
-				gui = new GUI( { width: 400 } );
-				ssrPass.surfDist=.003
-				gui.add(params, 'enableSSR').name( 'Enable SSR' );
-				gui.add(ssrPass, 'isDistanceAttenuation');
-				ssrPass.maxDistance=10;
-				gui.add(ssrPass, 'maxDistance').min(0).max(30).step(.1);
-				gui.add(ssrPass,'isBouncing')
-				gui.add(ssrPass, 'output', {
-					'Default': SSRPass.OUTPUT.Default,
-					'SSR Only': SSRPass.OUTPUT.SSR,
-					'Beauty': SSRPass.OUTPUT.Beauty,
-					'Depth': SSRPass.OUTPUT.Depth,
-					'Normal': SSRPass.OUTPUT.Normal
-				}).onChange(function (value) {
-
-					ssrPass.output = parseInt(value);
+					scene.background = hdrCubeRenderTarget.texture;
 
 				});
-				gui.add(ssrPass, 'opacity').min(0).max(1);
-				gui.add(ssrPass, 'surfDist').min(0).max(.02).step(.0001);
-				gui.add(ssrPass, 'isInfiniteThick');
-				ssrPass.thickTolerance=.3
-				gui.add(ssrPass, 'thickTolerance').min(0).max(1).step(.01);
-				gui.add(ssrPass, 'isBlur');
-				gui.add(ssrPass, 'isNoise');
-				gui.add(ssrPass, 'noiseIntensity').min(0).max(.3).step(.001);
 
-				animate()
-			}
+			particleLight = new THREE.Mesh(new THREE.SphereBufferGeometry(4, 8, 8), new THREE.MeshBasicMaterial({ color: 0xffffff }));
+			scene.add(particleLight);
 
-			function onWindowResize() {
+			// Lights
 
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
+			scene.add(new THREE.AmbientLight(0x222222));
 
-				renderer.setSize( window.innerWidth, window.innerHeight );
+			var directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+			directionalLight.position.set(1, 1, 1).normalize();
+			scene.add(directionalLight);
 
-
-			}
+			var pointLight = new THREE.PointLight(0xffffff, 2, 800);
+			particleLight.add(pointLight);
 
 			//
 
-			function animate() {
-				requestAnimationFrame(animate)
-				stats.begin();
+			renderer = new THREE.WebGLRenderer({ antialias: true });
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			container.appendChild(renderer.domElement);
 
-				if(window.mesh_main)mesh_main.rotation.z+=.005
+			renderer.outputEncoding = THREE.sRGBEncoding;
+			renderer.toneMapping = THREE.ACESFilmicToneMapping;
+			renderer.toneMappingExposure = 0.75;
 
-				if(params.enableSSR){
-					composer.render();
-				}else{
-					renderer.render(scene,camera)
-				}
-				
-				stats.end();
+			//
 
-			}
+			var pmremGenerator = new THREE.PMREMGenerator(renderer);
+			pmremGenerator.compileEquirectangularShader();
 
-		</script>
+			//
 
-	</body>
+			stats = new Stats();
+			container.appendChild(stats.dom);
+
+			var controls = new OrbitControls(camera, renderer.domElement);
+			controls.minDistance = 200;
+			controls.maxDistance = 2000;
+
+			window.addEventListener('resize', onWindowResize, false);
+
+		}
+
+		function onWindowResize() {
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize(window.innerWidth, window.innerHeight);
+
+		}
+
+		//
+
+		function animate() {
+
+			requestAnimationFrame(animate);
+
+			render();
+			stats.update();
+
+		}
+
+		function render() {
+
+			var timer = Date.now() * 0.00025;
+
+			//camera.position.x = Math.cos( timer ) * 800;
+			//camera.position.z = Math.sin( timer ) * 800;
+
+			camera.lookAt(scene.position);
+
+			particleLight.position.x = Math.sin(timer * 7) * 300;
+			particleLight.position.y = Math.cos(timer * 5) * 400;
+			particleLight.position.z = Math.cos(timer * 3) * 300;
+
+			renderer.render(scene, camera);
+
+		}
+
+	</script>
+
+</body>
+
 </html>
