--- a/examples/webgl_lights_rectarealight_test_roughness.html
+++ b/examples/webgl_lights_rectarealight_test_roughness.html
@@ -91,30 +91,30 @@
 
 				var matStdObjects = new THREE.MeshStandardMaterial( { color: 0xA00000, roughness: 0, metalness: 0 } );
 
-				var geoBox = new THREE.BoxBufferGeometry( Math.PI, Math.sqrt( 2 ), Math.E );
-				var mshStdBox = new THREE.Mesh( geoBox, matStdObjects );
-				mshStdBox.position.set( 0, 5, 0 );
-				mshStdBox.rotation.set( 0, Math.PI / 2.0, 0 );
-				mshStdBox.castShadow = true;
-				mshStdBox.receiveShadow = true;
-				scene.add( mshStdBox );
+				// var geoBox = new THREE.BoxBufferGeometry( Math.PI, Math.sqrt( 2 ), Math.E );
+				// var mshStdBox = new THREE.Mesh( geoBox, matStdObjects );
+				// mshStdBox.position.set( 0, 5, 0 );
+				// mshStdBox.rotation.set( 0, Math.PI / 2.0, 0 );
+				// mshStdBox.castShadow = true;
+				// mshStdBox.receiveShadow = true;
+				// scene.add( mshStdBox );
 
 				var geoSphere = new THREE.SphereBufferGeometry( 1.5, 32, 32 );
 				var mshStdSphere = new THREE.Mesh( geoSphere, matStdObjects );
-				mshStdSphere.position.set( - 5, 5, 0 );
+				mshStdSphere.position.set( 0, 5, 0 );
 				mshStdSphere.castShadow = true;
 				mshStdSphere.receiveShadow = true;
 				scene.add( mshStdSphere );
 
-				var geoKnot = new THREE.TorusKnotBufferGeometry( 1.5, 0.5, 100, 16 );
-				var mshStdKnot = new THREE.Mesh( geoKnot, matStdObjects );
-				mshStdKnot.position.set( 5, 5, 0 );
-				mshStdKnot.castShadow = true;
-				mshStdKnot.receiveShadow = true;
-				scene.add( mshStdKnot );
+				// var geoKnot = new THREE.TorusKnotBufferGeometry( 1.5, 0.5, 100, 16 );
+				// var mshStdKnot = new THREE.Mesh( geoKnot, matStdObjects );
+				// mshStdKnot.position.set( 5, 5, 0 );
+				// mshStdKnot.castShadow = true;
+				// mshStdKnot.receiveShadow = true;
+				// scene.add( mshStdKnot );
 
 				var controls = new OrbitControls( camera, renderer.domElement );
-				controls.target.copy( mshStdBox.position );
+				controls.target.copy( mshStdSphere.position );
 				controls.update();
 
 				// GUI
@@ -230,24 +230,22 @@
 
 				requestAnimationFrame( animate );
 
-				if ( param.motion ) {
 
-					var t = ( Date.now() / 2000 );
+				var t = 0;
 
-					// move light in circle around center
-					// change light height with sine curve
+				// move light in circle around center
+				// change light height with sine curve
 
-					var r = 15.0;
+				var r = 15.0;
 
-					var lx = r * Math.cos( t );
-					var lz = r * Math.sin( t );
+				var lx = r * Math.cos( t );
+				var lz = r * Math.sin( t );
 
-					var ly = 5.0 + 5.0 * Math.sin( t / 3.0 );
+				var ly = 5.0 + 5.0 * Math.sin( t / 3.0 );
 
-					rectLight.position.set( lx, ly, lz );
-					rectLight.lookAt( origin );
+				rectLight.position.set( lx, ly, lz );
+				rectLight.lookAt( origin );
 
-				}
 
 				renderer.render( scene, camera );
 
